manifests/ingress/ingress-webapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: fleetman.yanisdevsecops.com #k8s-default-mainlb-a9c4ff3c6d-2010138050.us-east-1.elb.amazonaws.com #
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleetman-webapp
                port:
                  number: 80
